# raytrace

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  intersections.cpp  intersections.h  main.cpp  main.h  primitives.h  settings_reader.h  threadpool.cpp  threadpool.h  transform.cpp  transform.h  variables.h
Tests/: test.cpp
hw3-submissionscenes/: scene6.test
tests/: sphere_test.cpp  test_common.cpp  test_common.h  transform_test.cpp  triangle_test.cpp
testscenes/: scene1.test  scene3.test  scene_test.test  test_directional.test
